Remove old files and update to rod
